Fixed Shopping List Activity - Add Item - Bug

--- a/ChoreManager/app/src/main/res/layout/activity_groceries.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_groceries.xml
@@ -81,7 +81,8 @@
             android:layout_marginStart="5dp"
             android:layout_weight="1"
             android:background="@color/colorAccent"
-            android:text="@string/deleteSelected" />
+            android:text="@string/deleteSelected"
+            android:layout_marginLeft="5dp" />
 
         <Button
             android:id="@+id/addItem"
