--- a/ChoreManager/app/src/main/res/layout/activity_shopping_list.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_shopping_list.xml
@@ -130,7 +130,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
+        android:layout_width="368dp"
         android:layout_height="48dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -142,39 +142,71 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
-            android:id="@+id/deleteButton"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
-            android:text="@string/deleteSelected" />
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/purchasedButton"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_weight="1"
-            android:background="@color/colorAccent"
-            android:text="@string/markPurchased" />
+            <Button
+                android:id="@+id/purchasedButton"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent"
+                android:text="@string/markPurchased"
+                android:textSize="14sp" />
 
-        <Button
-            android:id="@+id/addItem"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="0dp"
+            <Button
+                android:id="@+id/deleteButton"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent"
+                android:text="@string/deleteSelected"
+                android:textAlignment="center"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
-            android:onClick="onCreateItemPress"
-            android:text="@string/addItem" />
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/addGrocery"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent"
+                android:onClick="onCreateItemPress"
+                android:text="Add Grocery" />
+
+            <Button
+                android:id="@+id/addMaterial"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent"
+                android:onClick="onCreateItemPress"
+                android:text="Add Material"
+                android:textAlignment="center"
+                android:textSize="12sp" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <TextView
