added code for deletion/addition in shopping list

--- a/ChoreManager/app/src/main/res/layout/activity_shopping_list.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_shopping_list.xml
@@ -16,8 +16,10 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.0">
 
         <ScrollView
             android:id="@+id/materialScrollView"
