--- a/ChoreManager/app/src/main/res/layout/activity_shopping_list.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_shopping_list.xml
@@ -19,113 +19,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
 
-        <ScrollView
-            android:id="@+id/materialScrollView"
-            android:layout_width="match_parent"
+        <ListView
+            android:id="@+id/materialsListView"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_weight=".5"
-            android:background="@color/secondaryLightColor"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
+            android:layout_weight=".5" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <CheckBox
-                    android:id="@+id/shopping_item1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/shopping_item1"
-                    android:textSize="25sp" />
-
-                <CheckBox
-                    android:id="@+id/shopping_item2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/shopping_item2"
-                    android:textSize="25sp" />
-
-                <CheckBox
-                    android:id="@+id/shopping_item3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/shopping_item3"
-                    android:textSize="25sp" />
-
-                <CheckBox
-                    android:id="@+id/shopping_item4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/shopping_item4"
-                    android:textSize="25sp" />
-
-            </LinearLayout>
-
-        </ScrollView>
-
-        <ScrollView
-            android:id="@+id/groceryScrollView"
-            android:layout_width="match_parent"
+        <ListView
+            android:id="@+id/groceriesListView"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_weight=".5"
-            android:background="@color/secondaryLightColor"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <CheckBox
-                    android:id="@+id/g_shopping_item1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/g_shopping_item1"
-                    android:textSize="25sp" />
-
-                <CheckBox
-                    android:id="@+id/g_shopping_item2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/g_shopping_item2"
-                    android:textSize="25sp" />
-
-                <CheckBox
-                    android:id="@+id/g_shopping_item3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/g_shopping_item3"
-                    android:textSize="25sp" />
-
-                <CheckBox
-                    android:id="@+id/g_shopping_item4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/g_shopping_item4"
-                    android:textSize="25sp" />
-
-            </LinearLayout>
-
-        </ScrollView>
+            android:layout_weight=".5" />
     </LinearLayout>
 
     <LinearLayout
