--- a/ChoreManager/app/src/main/res/layout/add_item_layout.xml
+++ b/ChoreManager/app/src/main/res/layout/add_item_layout.xml
@@ -20,19 +20,6 @@
         android:ems="10"
         android:inputType="textPersonName" />
 
-    <TextView
-        android:id="@+id/dialogTitleName2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/string_please_select_a_category"
-        android:textSize="20sp" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="35dp" />
-
     <Space
         android:layout_width="match_parent"
         android:layout_height="10dp" />
@@ -65,13 +52,13 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:layout_marginEnd="5dp"
+            android:layout_marginLeft="2.5dp"
+            android:layout_marginRight="5dp"
             android:layout_marginStart="2.5dp"
             android:layout_weight=".99"
             android:background="@color/colorAccent"
             android:text="@string/string_confirm"
-            android:textColor="@color/secondaryTextColor"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="2.5dp" />
+            android:textColor="@color/secondaryTextColor" />
     </LinearLayout>
 
 </LinearLayout>
