Added buttion fuctionality same as Material List but to Grocery List

--- a/ChoreManager/app/src/main/res/layout/activity_groceries.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_groceries.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.example.alan.peter.bilal.sam.choremanager.Groceries">
 
-    <ScrollView
-        android:id="@+id/scrollView4"
+    <ListView
+        android:id="@+id/groceryListView"
         android:layout_width="0dp"
         android:layout_height="536dp"
         android:layout_marginBottom="8dp"
@@ -21,42 +21,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <CheckBox
-                android:id="@+id/g_item1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/g_item1"
-                android:textSize="25sp" />
-
-            <CheckBox
-                android:id="@+id/g_item2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/g_item2"
-                android:textSize="25sp" />
-
-            <CheckBox
-                android:id="@+id/g_item3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/g_item3"
-                android:textSize="25sp" />
-
-            <CheckBox
-                android:id="@+id/g_item4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/g_item4"
-                android:textSize="25sp" />
-
-        </LinearLayout>
-
-    </ScrollView>
+    </ListView>
 
     <LinearLayout
         android:id="@+id/linearLayout3"
