--- a/ChoreManager/app/src/main/res/layout/activity_user_menu.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_user_menu.xml
@@ -62,6 +62,7 @@
             android:layout_marginStart="5dp"
             android:layout_weight="1"
             android:background="@color/colorAccent"
+            android:onClick="createUserOnClick"
             android:text="@string/createNewUser" />
 
     </LinearLayout>
