--- a/ChoreManager/app/src/main/res/layout/activity_shopping_list.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_shopping_list.xml
@@ -58,6 +58,7 @@
             android:layout_marginStart="5dp"
             android:layout_weight="1"
             android:background="@color/colorAccent"
+            android:onClick="onPurchaseClick"
             android:text="@string/markPurchased"
             android:textSize="14sp" />
 
@@ -70,6 +71,7 @@
             android:layout_marginStart="5dp"
             android:layout_weight="1"
             android:background="@color/colorAccent"
+            android:onClick="onDeletionClick"
             android:text="@string/deleteSelected"
             android:textAlignment="center"
             android:textSize="14sp" />
