--- a/ChoreManager/app/src/main/res/layout/activity_choose_profile_picture.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_choose_profile_picture.xml
@@ -4,55 +4,140 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="SetTeamIcon"
     tools:context="com.example.alan.peter.bilal.sam.choremanager.ChooseProfilePictureActivity">
 
     <LinearLayout
         android:layout_width="376dp"
-        android:layout_height="499dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="100dp" />
 
-        <EditText
-            android:id="@+id/editText"
+        <TextView
+            android:id="@+id/textTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:gravity="center"
-            android:inputType="none"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColorLink="@color/colorAccent"
             android:textSize="25sp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="0dp"
             tools:text="@string/string_select_a_new_avatar" />
 
-        <GridLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:columnCount="3"
-            android:rowCount="2">
+            android:background="@color/colorAccent">
 
-            <ImageView
-                android:id="@+id/ic_avatar_00"
+            <GridLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_columnSpan="1"
-                android:layout_row="0"
-                android:layout_rowSpan="1"
-                android:contentDescription="@string/desc_avatar_image"
-                app:srcCompat="@drawable/ic_avatar_00" />
+                android:layout_gravity="center_horizontal"
+                android:background="@color/colorAccent"
+                android:clipToPadding="false"
+                android:columnCount="3"
+                android:rowCount="3">
 
-        </GridLayout>
+                <ImageView
+                    android:id="@+id/ic_avatar_11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/desc_avatar_image"
+                    android:onClick="SetProfileIcon"
+                    app:srcCompat="@drawable/ic_avatar_11" />
+
+                <ImageView
+                    android:id="@+id/ic_avatar_00"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/desc_avatar_image"
+                    android:onClick="SetProfileIcon"
+                    app:srcCompat="@drawable/ic_avatar_00" />
+
+                <ImageView
+                    android:id="@+id/ic_avatar_01"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/desc_avatar_image"
+                    android:onClick="SetProfileIcon"
+                    app:srcCompat="@drawable/ic_avatar_01" />
+
+                <ImageView
+                    android:id="@+id/ic_avatar_02"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/desc_avatar_image"
+                    android:onClick="SetProfileIcon"
+                    app:srcCompat="@drawable/ic_avatar_02"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="336dp" />
+
+                <ImageView
+                    android:id="@+id/ic_avatar_03"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/desc_avatar_image"
+                    android:onClick="SetProfileIcon"
+                    app:srcCompat="@drawable/ic_avatar_03" />
+
+                <ImageView
+                    android:id="@+id/ic_avatar_04"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/desc_avatar_image"
+                    android:onClick="SetProfileIcon"
+                    app:srcCompat="@drawable/ic_avatar_04" />
+
+                <ImageView
+                    android:id="@+id/ic_avatar_05"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/desc_avatar_image"
+                    android:onClick="SetProfileIcon"
+                    app:srcCompat="@drawable/ic_avatar_05" />
+
+                <ImageView
+                    android:id="@+id/ic_avatar_06"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/desc_avatar_image"
+                    android:onClick="SetProfileIcon"
+                    app:srcCompat="@drawable/ic_avatar_06" />
+
+                <ImageView
+                    android:id="@+id/ic_avatar_07"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/desc_avatar_image"
+                    android:onClick="SetProfileIcon"
+                    app:srcCompat="@drawable/ic_avatar_07" />
+
+                <ImageView
+                    android:id="@+id/ic_avatar_08"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/desc_avatar_image"
+                    android:onClick="SetProfileIcon"
+                    app:srcCompat="@drawable/ic_avatar_08" />
+
+                <ImageView
+                    android:id="@+id/ic_avatar_09"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/desc_avatar_image"
+                    android:onClick="SetProfileIcon"
+                    app:srcCompat="@drawable/ic_avatar_09" />
+
+                <ImageView
+                    android:id="@+id/ic_avatar_10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/desc_avatar_image"
+                    android:onClick="SetProfileIcon"
+                    app:srcCompat="@drawable/ic_avatar_10" />
+
+            </GridLayout>
+        </ScrollView>
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
