--- a/ChoreManager/app/src/main/res/layout/activity_new_user.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_new_user.xml
@@ -7,9 +7,17 @@
     tools:context="com.example.alan.peter.bilal.sam.choremanager.NewUserActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,13 +27,14 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="300dp"
-                android:layout_height="200dp"
-                android:background="@color/colorAccent"
+            <ImageView
+                android:id="@+id/ic_avatar_11"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:background="@color/secondaryDarkColor"
                 android:contentDescription="@string/string_specifc_user_profile_hint"
-                app:srcCompat="@mipmap/ic_launcher" />
+                android:onClick="setAvatarButtonOnClick"
+                app:srcCompat="@drawable/ic_avatar_11_2" />
         </LinearLayout>
 
         <LinearLayout
